[#1140] Suppress all breakpoints when skipping